--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <!-- Load the Netlify CMS script -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-  </body>
+     <script>
+  window.CMS_MANUAL_INIT = true;
+</script>
+
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+<script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+<script>
+  NetlifyCmsApp.init();
+</script>
+
 </html>
